--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>Tree operations</h1>
-    <script src="./tree.js" />
+    <!-- <script src="./tree.js" /> -->
+    <script src="./array-implementation-binary-tree.js" />
   </body>
 </html>
