--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <h1>Tree operations</h1>
     <!-- <script src="./tree.js" /> -->
-    <script src="./array-implementation-binary-tree.js" />
+    <!-- <script src="./array-implementation-binary-tree.js" /> -->
+    <script src="./level-order.js" />
   </body>
 </html>
