Is the binary tree continuous tree or not

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Tree operations</h1>
     <!-- <script src="./tree.js" /> -->
     <!-- <script src="./array-implementation-binary-tree.js" /> -->
-    <script src="./level-order.js" />
+    <!-- <script src="./level-order.js" /> -->
+    <script src="./continuous-tree.js" />
   </body>
 </html>
