Is the tree foldable

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- <script src="./tree.js" /> -->
     <!-- <script src="./array-implementation-binary-tree.js" /> -->
     <!-- <script src="./level-order.js" /> -->
-    <script src="./continuous-tree.js" />
+    <!-- <script src="./continuous-tree.js" /> -->
+    <script src="./foldable-tree.js" />
   </body>
 </html>
