--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!-- <script src="./level-order.js" /> -->
     <!-- <script src="./continuous-tree.js" /> -->
     <!-- <script src="./foldable-tree.js" /> -->
-    <script src="./expression-tree.js" />
+    <!-- <script src="./expression-tree.js" /> -->
+    <script src="./evaluation-expression-tree.js" />
   </body>
 </html>
