is symmetric binary tree

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <!-- <script src="./continuous-tree.js" /> -->
     <!-- <script src="./foldable-tree.js" /> -->
     <!-- <script src="./expression-tree.js" /> -->
-    <script src="./evaluation-expression-tree.js" />
+    <!-- <script src="./evaluation-expression-tree.js" /> -->
+    <script src="./symmetric.js" />
   </body>
 </html>
