Inorder traversal of tree without recursion

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!-- <script src="./foldable-tree.js" /> -->
     <!-- <script src="./expression-tree.js" /> -->
     <!-- <script src="./evaluation-expression-tree.js" /> -->
-    <script src="./symmetric.js" />
+    <!-- <script src="./symmetric.js" /> -->
+    <script src="./inorder-tree-traversal-without-recursion.js" />
   </body>
 </html>
