--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <!-- <script src="./expression-tree.js" /> -->
     <!-- <script src="./evaluation-expression-tree.js" /> -->
     <!-- <script src="./symmetric.js" /> -->
-    <script src="./inorder-tree-traversal-without-recursion.js" />
+    <!-- <script src="./inorder-tree-traversal-without-recursion.js" /> -->
+    <script src="./print-postorder-from-in-n-pre.js" />
   </body>
 </html>
