print all binary trees

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <!-- <script src="./evaluation-expression-tree.js" /> -->
     <!-- <script src="./symmetric.js" /> -->
     <!-- <script src="./inorder-tree-traversal-without-recursion.js" /> -->
-    <script src="./print-postorder-from-in-n-pre.js" />
+    <!-- <script src="./print-postorder-from-in-n-pre.js" /> -->
+    <script src="./all-possible-binary-trees.js" />
   </body>
 </html>
