print inorder successor of nodes in tree

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <!-- <script src="./symmetric.js" /> -->
     <!-- <script src="./inorder-tree-traversal-without-recursion.js" /> -->
     <!-- <script src="./print-postorder-from-in-n-pre.js" /> -->
-    <script src="./all-possible-binary-trees.js" />
+    <!-- <script src="./all-possible-binary-trees.js" /> -->
+    <script src="./populate-inorder-successor-for-all-nodes.js" />
   </body>
 </html>
