nth order of inorder traversal tree

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <!-- <script src="./inorder-tree-traversal-without-recursion.js" /> -->
     <!-- <script src="./print-postorder-from-in-n-pre.js" /> -->
     <!-- <script src="./all-possible-binary-trees.js" /> -->
-    <script src="./populate-inorder-successor-for-all-nodes.js" />
+    <!-- <script src="./populate-inorder-successor-for-all-nodes.js" /> -->
+    <script src="./nth-order-of-inorder.js" />
   </body>
 </html>
