level order traversal of tree in spiral form

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <!-- <script src="./print-postorder-from-in-n-pre.js" /> -->
     <!-- <script src="./all-possible-binary-trees.js" /> -->
     <!-- <script src="./populate-inorder-successor-for-all-nodes.js" /> -->
-    <script src="./nth-order-of-inorder.js" />
+    <!-- <script src="./nth-order-of-inorder.js" /> -->
+    <script src="./level-order-traversal-in-spiral-form.js" />
   </body>
 </html>
