spiral order using 2 stacks

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <!-- <script src="./all-possible-binary-trees.js" /> -->
     <!-- <script src="./populate-inorder-successor-for-all-nodes.js" /> -->
     <!-- <script src="./nth-order-of-inorder.js" /> -->
-    <script src="./level-order-traversal-in-spiral-form.js" />
+    <!-- <script src="./level-order-traversal-in-spiral-form.js" /> -->
+    <script src="./spiral-order-using-2stacks.js" />
   </body>
 </html>
