Level order traversal with direction change after every two levels

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <!-- <script src="./populate-inorder-successor-for-all-nodes.js" /> -->
     <!-- <script src="./nth-order-of-inorder.js" /> -->
     <!-- <script src="./level-order-traversal-in-spiral-form.js" /> -->
-    <script src="./spiral-order-using-2stacks.js" />
+    <!-- <script src="./spiral-order-using-2stacks.js" /> -->
+    <script src="./level-order-direction-change-every-2levels.js" />
   </body>
 </html>
