morries preorder traversal of a tree

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <!-- <script src="./spiral-order-using-2stacks.js" /> -->
     <!-- <script src="./level-order-direction-change-every-2levels.js" /> -->
     <!-- <script src="./reverse-level-order-traversal.js" /> -->
-    <script src="./specific-level-order-in-perfect-binary-tree.js" />
+    <!-- <script src="./specific-level-order-in-perfect-binary-tree.js" /> -->
+    <script src="./morris-traversal-preorder.js" />
   </body>
 </html>
