iterative preorder traversal of tree

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <!-- <script src="./level-order-direction-change-every-2levels.js" /> -->
     <!-- <script src="./reverse-level-order-traversal.js" /> -->
     <!-- <script src="./specific-level-order-in-perfect-binary-tree.js" /> -->
-    <script src="./morris-traversal-preorder.js" />
+    <!-- <script src="./morris-traversal-preorder.js" /> -->
+    <script src="./iterative-preorder.js" />
   </body>
 </html>
