--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <!-- <script src="./reverse-level-order-traversal.js" /> -->
     <!-- <script src="./specific-level-order-in-perfect-binary-tree.js" /> -->
     <!-- <script src="./morris-traversal-preorder.js" /> -->
-    <script src="./iterative-preorder.js" />
+    <!-- <script src="./iterative-preorder.js" /> -->
+    <script src="./diagonal-traversal.js"/>
   </body>
 </html>
