desnsity of binary tree

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <!-- <script src="./specific-level-order-in-perfect-binary-tree.js" /> -->
     <!-- <script src="./morris-traversal-preorder.js" /> -->
     <!-- <script src="./iterative-preorder.js" /> -->
-    <script src="./diagonal-traversal.js"/>
+    <!-- <script src="./diagonal-traversal.js"/> -->
+    <script src="./desnsity-of-binary-tree.js" />
   </body>
 </html>
