Modify a binary tree to get preorder traversal using right pointers only

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <!-- <script src="./morris-traversal-preorder.js" /> -->
     <!-- <script src="./iterative-preorder.js" /> -->
     <!-- <script src="./diagonal-traversal.js"/> -->
-    <script src="./desnsity-of-binary-tree.js" />
+    <!-- <script src="./desnsity-of-binary-tree.js" /> -->
+    <script src="./modify-binary-tree-using-only-right-pointers.js" />
   </body>
 </html>
