Construct Complete Binary Tree from its Linked List Representation

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <!-- <script src="./iterative-preorder.js" /> -->
     <!-- <script src="./diagonal-traversal.js"/> -->
     <!-- <script src="./desnsity-of-binary-tree.js" /> -->
-    <script src="./modify-binary-tree-using-only-right-pointers.js" />
+    <!-- <script src="./modify-binary-tree-using-only-right-pointers.js" /> -->
+    <script src="./construct-binary-tree-from-linkedList.js" />
   </body>
 </html>
