--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <!-- <script src="./diagonal-traversal.js"/> -->
     <!-- <script src="./desnsity-of-binary-tree.js" /> -->
     <!-- <script src="./modify-binary-tree-using-only-right-pointers.js" /> -->
-    <script src="./construct-binary-tree-from-linkedList.js" />
+    <!-- <script src="./construct-binary-tree-from-linkedList.js" /> -->
+    <script src="./construct-binary-tree-from-array.js" />
   </body>
 </html>
