--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <!-- <script src="./desnsity-of-binary-tree.js" /> -->
     <!-- <script src="./modify-binary-tree-using-only-right-pointers.js" /> -->
     <!-- <script src="./construct-binary-tree-from-linkedList.js" /> -->
-    <script src="./construct-binary-tree-from-array.js" />
+    <!-- <script src="./construct-binary-tree-from-array.js" /> -->
+    <script src="./construct-binary-tree-from-pre-n-post-array.js" />
   </body>
 </html>
