--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <!-- <script src="./modify-binary-tree-using-only-right-pointers.js" /> -->
     <!-- <script src="./construct-binary-tree-from-linkedList.js" /> -->
     <!-- <script src="./construct-binary-tree-from-array.js" /> -->
-    <script src="./construct-binary-tree-from-pre-n-post-array.js" />
+    <!-- <script src="./construct-binary-tree-from-pre-n-post-array.js" /> -->
+    <script src="./binary-search-tree-operations.js" />
   </body>
 </html>
