--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <!-- <script src="./construct-binary-tree-from-linkedList.js" /> -->
     <!-- <script src="./construct-binary-tree-from-array.js" /> -->
     <!-- <script src="./construct-binary-tree-from-pre-n-post-array.js" /> -->
-    <script src="./binary-search-tree-operations.js" />
+    <!-- <script src="./binary-search-tree-operations.js" /> -->
+    <script src="./construct-BST-from-pre.js" />
   </body>
 </html>
