convert Binary Tree to Binary Search Tee

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <!-- <script src="./construct-binary-tree-from-array.js" /> -->
     <!-- <script src="./construct-binary-tree-from-pre-n-post-array.js" /> -->
     <!-- <script src="./binary-search-tree-operations.js" /> -->
-    <script src="./construct-BST-from-pre.js" />
+    <!-- <script src="./construct-BST-from-pre.js" /> -->
+    <script src="./convert-binaryTree-to-BST.js" />
   </body>
 </html>
