convert BST to min Heap

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <!-- <script src="./construct-binary-tree-from-pre-n-post-array.js" /> -->
     <!-- <script src="./binary-search-tree-operations.js" /> -->
     <!-- <script src="./construct-BST-from-pre.js" /> -->
-    <script src="./convert-binaryTree-to-BST.js" />
+    <!-- <script src="./convert-binaryTree-to-BST.js" /> -->
+    <script src="./convert-BST-to-minHeap.js" />
   </body>
 </html>
