Is given binary tree is BST or not

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <!-- <script src="./binary-search-tree-operations.js" /> -->
     <!-- <script src="./construct-BST-from-pre.js" /> -->
     <!-- <script src="./convert-binaryTree-to-BST.js" /> -->
-    <script src="./convert-BST-to-minHeap.js" />
+    <!-- <script src="./convert-BST-to-minHeap.js" /> -->
+    <script src="./is-BST.js" />
   </body>
 </html>
