--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
     <!-- <script src="./construct-BST-from-pre.js" /> -->
     <!-- <script src="./convert-binaryTree-to-BST.js" /> -->
     <!-- <script src="./convert-BST-to-minHeap.js" /> -->
-    <script src="./is-BST.js" />
+    <!-- <script src="./is-BST.js" /> -->
+    <!-- <script src="./check-for-BSTs.js" /> -->
+    <script src="./distance-between-2-nodes-BST.js" />
   </body>
 </html>
