count of pairs from 2 BSTS whose sum is equals to x

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <!-- <script src="./convert-BST-to-minHeap.js" /> -->
     <!-- <script src="./is-BST.js" /> -->
     <!-- <script src="./check-for-BSTs.js" /> -->
-    <script src="./distance-between-2-nodes-BST.js" />
+    <!-- <script src="./distance-between-2-nodes-BST.js" /> -->
+    <script src="./count-pairs-from-2-BSTs.js" />
   </body>
 </html>
