Inorder predecessor and successor for a given key in BST

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <!-- <script src="./check-for-BSTs.js" /> -->
     <!-- <script src="./distance-between-2-nodes-BST.js" /> -->
     <!-- <script src="./count-pairs-from-2-BSTs.js" /> -->
-    <script src="./remove-bsts-outside-range.js" />
+    <!-- <script src="./remove-bsts-outside-range.js" /> -->
+    <script src="./find-predecessor-successor-BST.js" />
   </body>
 </html>
