Find a pair with given sum in a Balanced BST

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <!-- <script src="./distance-between-2-nodes-BST.js" /> -->
     <!-- <script src="./count-pairs-from-2-BSTs.js" /> -->
     <!-- <script src="./remove-bsts-outside-range.js" /> -->
-    <script src="./find-predecessor-successor-BST.js" />
+    <!-- <script src="./find-predecessor-successor-BST.js" /> -->
+    <script src="./find-apair-with-given-sum-in-BST.js" />
   </body>
 </html>
