Heap sort implementation

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <!-- <script src="./count-pairs-from-2-BSTs.js" /> -->
     <!-- <script src="./remove-bsts-outside-range.js" /> -->
     <!-- <script src="./find-predecessor-successor-BST.js" /> -->
-    <script src="./find-apair-with-given-sum-in-BST.js" />
+    <!-- <script src="./find-apair-with-given-sum-in-BST.js" /> -->
+    <script src="./Heap-sort.js" />
   </body>
 </html>
