AVL tree insert operation

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <!-- <script src="./remove-bsts-outside-range.js" /> -->
     <!-- <script src="./find-predecessor-successor-BST.js" /> -->
     <!-- <script src="./find-apair-with-given-sum-in-BST.js" /> -->
-    <script src="./Heap-sort.js" />
+    <!-- <script src="./Heap-sort.js" /> -->
+    <script src="./avl-tree.js" />
   </body>
 </html>
