avl tre delete node O(logn) time

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <!-- <script src="./find-predecessor-successor-BST.js" /> -->
     <!-- <script src="./find-apair-with-given-sum-in-BST.js" /> -->
     <!-- <script src="./Heap-sort.js" /> -->
-    <script src="./avl-tree.js" />
+    <!-- <script src="./avl-tree.js" /> -->
+    <script src="./avl-tree-delete-node.js" />
   </body>
 </html>
