--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <!-- <script src="./find-apair-with-given-sum-in-BST.js" /> -->
     <!-- <script src="./Heap-sort.js" /> -->
     <!-- <script src="./avl-tree.js" /> -->
-    <script src="./avl-tree-delete-node.js" />
+    <!-- <script src="./avl-tree-delete-node.js" /> -->
+    <script src="./avl-with-duplicate-keys.js" />
   </body>
 </html>
