Morries Inorder traversal of a given binary tree

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     <!-- <script src="./Heap-sort.js" /> -->
     <!-- <script src="./avl-tree.js" /> -->
     <!-- <script src="./avl-tree-delete-node.js" /> -->
-    <script src="./avl-with-duplicate-keys.js" />
+    <!-- <script src="./avl-with-duplicate-keys.js" /> -->
+    <script src="./morries-inorder-traversal.js" />
   </body>
 </html>
